--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">3Dプログラミングたんけん</h2>
                     <p class="text-gray-600 mb-4">3D空間でプログラミングの基本を学ぼう！命令ブロックを並べて、キャラクターをゴールまで導こう。</p>
-                    <div class="flex justify-between items-center">
-                        <span class="text-sm font-medium text-indigo-600">難易度: 初級〜中級</span>
+                    <div class="flex justify-end items-center">
                         <a href="3d_route.html" target="_blank" class="inline-flex items-center justify-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-lg transition-colors">
                             プレイする
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
@@ -70,8 +69,7 @@
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">ジグソーパズル</h2>
                     <p class="text-gray-600 mb-4">ピースを正しく配置して、画像を完成させよう！ピースは回転させることもできるよ。</p>
-                    <div class="flex justify-between items-center">
-                        <span class="text-sm font-medium text-indigo-600">難易度: 初級〜上級</span>
+                    <div class="flex justify-end items-center">
                         <a href="jigsaw_puzzle.html" target="_blank" class="inline-flex items-center justify-center px-4 py-2 bg-green-500 hover:bg-green-600 text-white font-medium rounded-lg transition-colors">
                             プレイする
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
@@ -92,8 +90,7 @@
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">ロジカルルートパズル</h2>
                     <p class="text-gray-600 mb-4">論理的思考を鍛えるパズルゲーム。道タイルを配置して、スタートからゴールまでの経路を作ろう！</p>
-                    <div class="flex justify-between items-center">
-                        <span class="text-sm font-medium text-indigo-600">難易度: 中級〜上級</span>
+                    <div class="flex justify-end items-center">
                         <a href="route_puzzle.html" target="_blank" class="inline-flex items-center justify-center px-4 py-2 bg-yellow-500 hover:bg-yellow-600 text-white font-medium rounded-lg transition-colors">
                             プレイする
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
